--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bs": "browser-sync start --config bs-config.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "browser-sync": "^2.26.7"
+  "dependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.24.3"
   }
 }
